[project]
name = "api"
description = "FastAPI proxy for bare Git LFS server, with GitHub OAuth"
authors = [
	{ name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
version = "0.1.0"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
	"pre-commit~=4.4.0",
]

[project.urls]
repository = "https://github.com/EFPL-ENAC/enac-lfs-proxy"

[tool.ruff]
line-length = 120
preview = true

[tool.codespell]
skip = 'uv.lock'
